# adcs_firmware

./: .ccsproject  .clang-format  .cproject  .dockerignore  .gitignore  .gitmodules  .project  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE  README.md  blah  compile.py  compile.sh  gdb_test  install_msp430_toolchain.py  install_toolchain_ubuntu.sh  json.c  json.h  lnk_msp430f5529.cmd  log.txt  main.c  make_blinky.sh  msp430_cmake_toolchain.cmake  msp430gcc_toolchain.cmake  msp430toolchain.cmake  regression_tests.py  regressions.py  spi.c  spi.h  test_build.sh  test_builds.py  test_compile.c  toolchain.cmake  trace_cmake.sh
application/: CMakeLists.txt
application/emulated/: CMakeLists.txt
application/emulated/inc/: obc_emulator.h
application/emulated/src/: obc_emulator.c
application/inc/: BSP.h  jsons.h  magnetorquers.h  obc_interface.h  platform.h
application/src/: BSP.c  jsons.c  magnetorquers.c  main.c  obc_emulator.c  obc_interface.c  reaction_wheels.c
bufferlib/: CMakeLists.txt  bufferlib.h
bufferlib/inc/: fat_array.h  ringbuf.h
bufferlib/src/: ringbuf.c
bufferlib/test/: CMakeLists.txt  test1.c
core/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
core/accelerometer/: CMakeLists.txt
core/accelerometer/inc/: accelerometer.h
core/accelerometer/src/: accelerometer.c
core/accelerometer/tests/: CMakeLists.txt
core/emulated/: CMakeLists.txt  Makefile  cmake_install.cmake
core/emulated/src/: obc_emulator.c
core/inertial_measurement_unit/: CMakeLists.txt
core/inertial_measurement_unit/examples/: CMakeLists.txt
core/inertial_measurement_unit/inc/: imu.h
core/inertial_measurement_unit/src/: imu.c
core/inertial_measurement_unit/tests/: CMakeLists.txt
core/jsons/: CMakeLists.txt
core/jsons/inc/: jsons.h
core/jsons/src/: jsons.c
core/jsons/test/: CMakeLists.txt  dir_rw_x_read_check.c  dir_rw_x_read_parse_check.c  dir_rw_x_read_response.test.c  dir_rw_x_read_response_check.c  dir_rw_x_write_check.c  dir_rw_x_write_parse_check.c  dir_rw_x_write_response_check.c  dir_rw_y_read_check.c  dir_rw_y_read_parse_check.c  dir_rw_y_read_response_check.c  dir_rw_y_write_check.c  dir_rw_y_write_parse_check.c  dir_rw_y_write_response_check.c  dir_rw_z_read_check.c  dir_rw_z_read_parse_check.c  dir_rw_z_read_response_check.c  dir_rw_z_write_check.c  dir_rw_z_write_parse_check.c  dir_rw_z_write_response_check.c  fw_version_check.c  fw_version_parse.test.c  fw_version_parse_check.c  fw_version_response.test.c  fw_version_response_check.c  hw_version_check.c  hw_version_parse_check.c  hw_version_response.test.c  hw_version_response_check.c  invalid_json_test.c  invalid_jsons.c  json_test_hook.h  powermode_read_check.c  powermode_write_check.c  pwm_rw_x_read_check.c  pwm_rw_x_read_parse_check.c  pwm_rw_x_read_response_check.c  pwm_rw_x_write_check.c  pwm_rw_x_write_parse_check.c  pwm_rw_x_write_response_check.c  (+17 more)
core/jsons/test_old/: CMakeLists.txt  dir_rw_x_read_check.c  dir_rw_x_write_check.c  dir_rw_y_read_check.c  dir_rw_y_write_check.c  dir_rw_z_read_check.c  fw_version_check.c  hw_version_check.c  powermode_read_check.c  pwm_rw_x_read_check.c  pwm_rw_x_write_check.c  pwm_rw_y_write_check.c  pwm_rw_z_read_check.c
core/magnetometer/: CMakeLists.txt
core/magnetometer/inc/: magnetometers.h
core/magnetometer/src/: magnetometers.c
core/magnetometers/: CMakeLists.txt
core/magnetometers/examples/: CMakeLists.txt
core/magnetometers/inc/: magnetometer.h
core/magnetometers/src/: magnetometer.c
core/magnetorquers/: CMakeLists.txt
core/magnetorquers/inc/: magnetorquers.h
core/magnetorquers/src/: magnetorquers.c
core/magnetorquers/test/: CMakeLists.txt  TODO.txt  mqtr_dir_set_x.test.c  mqtr_dir_set_y.test.c  mqtr_dir_set_z.test.c  mqtr_pwm_set_x.test.c  mqtr_pwm_set_y.test.c  mqtr_pwm_set_z.test.c
core/obc_interface/: CMakeLists.txt  obc_interface.c
core/obc_interface/inc/: obc_interface.h
core/obc_interface/src/: obc_interface.c
core/obc_interface/test/: CMakeLists.txt
core/reaction_wheels/: CMakeLists.txt
core/reaction_wheels/inc/: reaction_wheels.h
core/reaction_wheels/src/: reaction_wheels.c
core/reaction_wheels/test/: CMakeLists.txt  TODO.txt  reactionwheel_x_dir_set_check.c  reactionwheel_x_pwm_set.test.c  reactionwheel_x_set_check.c  reactionwheel_y_dir_set_check.c  reactionwheel_y_pwm_set.test.c  reactionwheel_y_set_check.c  reactionwheel_z_dir_set.test.c  reactionwheel_z_dir_set_check.c  reactionwheel_z_pwm_set.test.c  reactionwheel_z_set_check.c
core/src/: main.c  obc_interface.c  reaction_wheels.c
core/sun_sensors/: CMakeLists.txt  README.md  compile.py
core/sun_sensors/inc/: sun_sensors.h
core/sun_sensors/src/: sun_sensors.c
core/sun_sensors/test/: pitch_coordinate_check.c  roll_coordinate_check.c  test_TEMPLATE.txt  yaw_coordinate_check.c
drivers/: CMakeLists.txt
drivers/BSP/: BSP.c  BSP.h
drivers/bsp/: bsp.c
drivers/examples/: CMakeLists.txt  Readme.md  blinky.c  spi_example.bk  spi_example.c  sun_sensor.c  timer_blinky.c  uart_example.c
drivers/examples/api/: ads7841.example.c  ads7841_example.c  mqtr_pwm_api.example.c  reactionwheel_pwm.example.c  rw_z.example.c  spi_api_example.c
drivers/examples/devices/: ads7841_example.c  sun_sensor.c
drivers/examples/peripherals/: spi_example.c  timerA0_pwm_pin_1_2.example.c  timerA0_pwm_pin_1_3.example.c  timerA0_pwm_pin_1_4.example.c  timerA0_pwm_pin_1_5_1000hz.example.c  timerA1_pwm_pin_2_1.example.c  timerA2_pwm_pin_2_3.example.c  timerA_pwm.example.c  (+16 more)
drivers/inc/: ads7841e.h  clocks.h  gpio.h  i2c.h  mcu.h  spi.h  timer_a.h  timer_a0.h  timers.h  uart.h  watchdog.h
drivers/src/: gpio.c  interrupts.c  mcu.c  spi.c  timer_a0.c  timers.c  uart.c  watchdog.c
drivers/test/: CMakeLists.txt
injection_api/: CMakeLists.txt
injection_api/inc/: injection_api.h
injection_api/src/: callback.c  injection_api.c
test/: CMakeLists.txt  blink.c  compile.py  install_msp430_toolchain.py  main.c  negativeParseTest.c  positiveParseTest.c  toolchain.cmake  uploadTest.c
test/native_test/: CMakeLists.txt
test/target_test/: CMakeLists.txt
(+98 files in other folders)
