cmake_minimum_required(VERSION 3.16)

if(CMAKE_CROSSCOMPILING STREQUAL "FALSE")
    project(ADCS_emulated_interfaces VERSION 1.0 LANGUAGES C)
    message("CONFIGURING ${PROJECT_NAME}")
    set(BUILD_TARGET ${PROJECT_NAME})

    ADCS_add_library(${BUILD_TARGET} STATIC)
    file(GLOB_RECURSE sources "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
    file(GLOB_RECURSE headers "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
    foreach(hdr ${headers})
        get_filename_component(hdr_dir ${hdr} DIRECTORY)
        list(APPEND include_dirs ${hdr_dir})
    endforeach(hdr ${headers})
    list(REMOVE_DUPLICATES include_dirs)

    target_include_directories(${BUILD_TARGET} PUBLIC ${include_dirs})
    target_sources(${BUILD_TARGET} PRIVATE ${sources})

    find_package(Threads REQUIRED)
    if(CMAKE_USE_PTHREADS_INIT)
        target_link_libraries(${BUILD_TARGET} PUBLIC pthread)
        target_compile_options(${BUILD_TARGET} PUBLIC "-lpthread")
    else()
        message(FATAL_ERROR "pthread is the only supported library for native platform firmware test")
    endif()
else()
    message("NOT BUILDING EMULATED INTERFACES BECAUSE CMAKE_CROSSCOMPILING==${CMAKE_CROSSCOMPILING}")
endif(CMAKE_CROSSCOMPILING STREQUAL "FALSE")
